--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    ECR_REPO_NAME: my-outfit-backend     # <-- set your ECR repo name
+    ECR_REPO_NAME: my-outfit    # <-- set your ECR repo name
 
 phases:
   pre_build:
@@ -10,12 +10,15 @@ phases:
       - echo "Logging in to ECR..."
       - ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
       - REGION=${AWS_REGION:-us-east-1}
+      - echo "Account: $ACCOUNT_ID  Region: $REGION"
       - aws ecr get-login-password --region $REGION | docker login --username AWS --password-stdin ${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com
       - IMAGE_URI=${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${ECR_REPO_NAME}
       - IMAGE_TAG=${CODEBUILD_RESOLVED_SOURCE_VERSION:0:7}
   build:
     commands:
       - echo "Building backend image..."
+      - IMAGE_URI=${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/my-outfit
+      - IMAGE_TAG=${CODEBUILD_RESOLVED_SOURCE_VERSION:0:7}
       - docker build -t $IMAGE_URI:$IMAGE_TAG -f backend/Dockerfile backend
   post_build:
     commands:
