--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -1,29 +1,25 @@
 version: 0.2
 env:
   variables:
-    # put YOUR full repo URI here (without a tag)
-    ECR_REPO_URI: 835405530238.dkr.ecr.us-east-1.amazonaws.com/my-outfit-backend
-
+    ECR_REPO_NAME: my-outfit-backend
 phases:
   pre_build:
     commands:
-      - set -e
+      - ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
       - REGION=${AWS_REGION:-us-east-1}
-      - ECR_REGISTRY=$(echo "$ECR_REPO_URI" | cut -d'/' -f1)
-      - echo "Logging in to ECR: $ECR_REGISTRY (region=$REGION)"
-      - $(aws ecr get-login-password --region "$REGION" | docker login --username AWS --password-stdin "$ECR_REGISTRY")
+      - test -n "$ACCOUNT_ID" -a "$ACCOUNT_ID" != "None" || (echo "ERROR: account id empty" && exit 1)
+      - ECR_REGISTRY="${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com"
+      - ECR_REPO_URI="${ECR_REGISTRY}/${ECR_REPO_NAME}"
+      - echo "Logging in to ECR: $ECR_REGISTRY"
+      - aws ecr get-login-password --region "$REGION" | docker login --username AWS --password-stdin "$ECR_REGISTRY"
   build:
     commands:
       - IMAGE_TAG="${CODEBUILD_RESOLVED_SOURCE_VERSION:0:7}"
       - IMAGE_URI="${ECR_REPO_URI}:${IMAGE_TAG}"
-      - echo "Building $IMAGE_URI"
       - docker build -t "$IMAGE_URI" -f backend/Dockerfile backend
   post_build:
     commands:
-      - echo "Pushing $IMAGE_URI"
       - docker push "$IMAGE_URI"
       - printf '[{"name":"backend","imageUri":"%s"}]\n' "$IMAGE_URI" > imagedefinitions.json
 artifacts:
-  files:
-    - imagedefinitions.json
-  discard-paths: yes
+  files: [imagedefinitions.json]
