--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,15 +1,19 @@
-# apprunner.yaml  (place at the repo root)
+# apprunner.yaml  (put this at the repo root)
 version: 1.0
 runtime: python3
+# runtime_version: "3.12"   # optionally pin a Python version that App Runner supports
 
 build:
   commands:
-    # run pip against the backend requirements file (no need to cd)
+    pre-build:
+      - python --version
     build:
       - pip install --no-cache-dir -r backend/requirements.txt
+    post-build:
+      - echo "Build finished"
 
 run:
-  # start your FastAPI app from within the backend folder
+  # Start your FastAPI app from the backend folder
   command: sh -c "cd backend && uvicorn app.main:app --host 0.0.0.0 --port 8000"
   network:
     port: 8000
